chore: add updateprofile
Signed-off-by: markkovari <kovarimarkofficial@gmail.com>